--- a/VierasVayla_SpeciesUpdate_Github.ipynb
+++ b/VierasVayla_SpeciesUpdate_Github.ipynb
@@ -451,7 +451,7 @@
     "    \"MX.5082333\",\n",
     "    \"MX.38313\"\n",
     "]\n",
-    "#concat the mx code with the appendix for the filter to work\n",
+    "#concat the mx code with the prefix for the filter to work\n",
     "taxon_id_sensitives = [\"http://tun.fi/\" + code for code in taxon_id_sensitives]\n",
     "len(taxon_id_sensitives)"
    ]
@@ -524,7 +524,9 @@
     "df_ruudut['Havaintopisteita'] = point_in_polygons.groupby('index_right').size()\n",
     "df_ruudut['AlueenLajit_SCI'] = point_in_polygons.groupby('index_right')['scientific_name_interpreted2'].apply(set)\n",
     "df_ruudut['AlueenLajit_FIN'] = point_in_polygons.groupby('index_right')['common_name_finnish2'].apply(set)\n",
-    "df_ruudut['Uniikkilajeja'] = df_ruudut['AlueenLajit_SCI'].apply(lambda x: len(x) if not isinstance(x, float) else 0) #to overcome type error when has no len()"
+    "df_ruudut['Uniikkilajeja'] = df_ruudut['AlueenLajit_SCI'].apply(lambda x: len(x) if not isinstance(x, float) else 0) #to overcome type error when has no len()\n",
+    "df_ruudut['AlueenLajit_SCI'] = df_ruudut['AlueenLajit_SCI'].astype(str) #ensure that output is string\n",
+    "df_ruudut['AlueenLajit_FIN'] = df_ruudut['AlueenLajit_FIN'].astype(str)"
    ]
   },
   {
